--- a/todoapp/package.json
+++ b/todoapp/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "uuid": "^13.0.0"
