--- a/node-mailer/package.json
+++ b/node-mailer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "mailer",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -10,12 +10,9 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2",
+    "mongoose": "^8.20.0",
     "nodemailer": "^7.0.10"
   }
 }
